[gd_scene load_steps=3 format=3 uid="uid://clcf2deg7mcs5"]

[ext_resource type="Script" path="res://scene/Menu.gd" id="1_gwsx0"]
[ext_resource type="FontFile" uid="uid://72qx53h8aeus" path="res://scene/XTypewriter-Regular.ttf" id="2_3rrji"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gwsx0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -227.5
offset_right = 227.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 0.87451, 0, 1)
theme_override_fonts/font = ExtResource("2_3rrji")
theme_override_font_sizes/font_size = 60
text = "Past Memories"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer" groups=["Button"]]
layout_mode = 2
theme_override_colors/font_color = Color(0.576471, 0.65098, 0.662745, 1)
theme_override_fonts/font = ExtResource("2_3rrji")
theme_override_font_sizes/font_size = 40
text = "Jogar"
flat = true

[node name="Controls" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer" groups=["Button"]]
layout_mode = 2
theme_override_colors/font_color = Color(0.576471, 0.65098, 0.662745, 1)
theme_override_fonts/font = ExtResource("2_3rrji")
theme_override_font_sizes/font_size = 40
text = "Controles"
flat = true

[node name="Credits" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer" groups=["Button"]]
layout_mode = 2
theme_override_colors/font_color = Color(0.576471, 0.65098, 0.662745, 1)
theme_override_fonts/font = ExtResource("2_3rrji")
theme_override_font_sizes/font_size = 40
text = "Cr√©ditos"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer" groups=["Button"]]
layout_mode = 2
theme_override_colors/font_color = Color(0.576471, 0.65098, 0.662745, 1)
theme_override_fonts/font = ExtResource("2_3rrji")
theme_override_font_sizes/font_size = 40
text = "Sair"
flat = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
